# Thesis

./: .gitignore  CMakeLists.txt  counter_lines.py  detect_system.py  main.c
include/: Decoder.h  FreeRTOSConfig.h  LinearRegression.h  Potentiometer.h  floatpointUtils.h  setup.h
linker/: memory.ld
linkerscripts/: linker.ld
source/: Decoder.c  LinearRegression.c  Potentiometer.c  floatpointUtils.c  main.c  microFFT.c  project.c  setup.c  startup_gcc.c
